duniverse/menhirLib.20200211/test/static/bad/resync-on-action-prec.exp
File "resync-on-action-prec.mly", line 7, characters 9-10:
Error: syntax error after 'erreur1' and before ':'.
Ill-formed production.
A production is a sequence of producers, followed with a semantic action.
Examples of well-formed producers:
  expr
  option(COMMA)
  separated_list(COMMA, expr)
  e = expr
  ds = declaration*
  es = list(terminated(expr, SEMI))
  es = list(e = expr SEMI { e })
  xs = list(x = var { Some x } | WILDCARD { None })
  expr [@cost 0]
